--- a/index.css
+++ b/index.css
@@ -237,6 +237,12 @@ body {
 
   .form-input-container {
     font-size: 1rem;
+    background-color: var(--bg-color);
+    text-decoration: none;
+    border-radius: 0.1rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--primary-color);
   }
 
   #form-input-name , #form-input-number {
