--- a/index.css
+++ b/index.css
@@ -21,8 +21,6 @@
     --bg-color-contact-text: light-dark(#21639E, #184F7E);
     --primary-color: light-dark(#2973B2, #1E5A8E);
     --primary-color-darker: light-dark(#192349, #141D41);
-    --box-shadow-color: light-dark(#21639E, #174870);
-    --box-shadow-hover: light-dark(#0F192D, #0E152F);
     --text-btn-color: light-dark(#EBECE6, #C3C4BD);
     --border-color: light-dark(#F2EFE7, #292929);
     --content-width: 80rem;
@@ -30,10 +28,12 @@
 
 body {
   background-color: #48A6A7;
+  overflow-y: hidden;
+  height: 100%;
 }
 
 #main {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,18 +52,13 @@ body {
     color: var(--primary-color);
 }
 
-#nav-title svg {
-    width: 2.5rem;
-    height: 2.5rem;
-    flex: flex-start;
-}
-
 #form {
   background-color: var(--bg-color);
   text-align: start;
-  padding: 0.2rem;
+  padding: 1rem;
   border: 0.1rem solid var(--border-color);
   border-radius: 0.2rem;
+  width: auto;
 }
 
 .form-input-container {
@@ -85,6 +80,7 @@ body {
 #form-error-text {
   text-align: start;
   color: #be1515;
+  padding: 0.2rem;
 }
 
 #form-btn {
@@ -92,9 +88,8 @@ body {
   border-radius: 0.375rem;
   color: var(--text-btn-color);
   transition: all 1s ease-in-out;
-  width: 15rem;
+  width: 16rem;
   height: 1rem;
-  box-shadow: 0 0.25rem var(--box-shadow-color);
   cursor: pointer;
 }
 
@@ -105,19 +100,17 @@ body {
 
 #form-btn:hover {
   background-color: var(--primary-color-darker);
-  box-shadow: 0 0.25rem var(--box-shadow-hover);
 }
 
 #form-btn:active {
   background-color: var(--primary-color);
-  box-shadow: 0 0.125rem var(--box-shadow-color);
   transform: translateY(0.125rem);
 }
 
 #contact-list {
     overflow-x: hidden;
     height: auto;
-    width: 50%;
+    width: auto;
     background-color: var(--bg-color);
     border-radius: 0.5rem ;
     display: flex;
@@ -125,7 +118,7 @@ body {
     justify-content: space-around;
     text-wrap: auto;
     list-style-type: none; 
-    padding: 0;
+    padding: 2.5rem;
     border: 0.1rem solid var(--border-color);
     max-height: 24rem;
   }
@@ -136,11 +129,12 @@ body {
     justify-content: space-between;
     margin-bottom: 0.625rem; 
     text-align: center;
-    padding: 0.3rem;
+    padding: 1.3rem;
     background-color: var(--primary-color-darker);
     border: 0.1rem solid var(--border-color);
     color: var(--text-btn-color);
     gap: 0.2rem;
+    border-radius: 0.5rem ;
   }
   
   .delete-contact-btn {
@@ -149,24 +143,21 @@ body {
     color: var(--text-btn-color);
     transition: all 1s ease-in-out;
     min-width: 2rem;
-    height: 1rem;
-    box-shadow: 0 0.25rem var(--box-shadow-color);
+    height: 1.7rem;
     cursor: pointer;
   }
 
   .delete-contact-btn svg {
-    width: 1rem;
-    height: 1rem;
+    width: 1.7rem;
+    height: 1.7rem;
   }
   
   .delete-contact-btn:hover {
     background-color: #c01515;
-    box-shadow: 0 0.25rem #991111;
   }
   
   .delete-contact-btn:active {
     background-color: #c01515;
-    box-shadow: 0 0.125rem #991111;
     transform: translateY(0.125rem);
   }
   
@@ -174,7 +165,7 @@ body {
     background-color: var(--bg-color-contact-text);
     border: 0.1rem solid var(--border-color);
     border-radius: 0.3rem;
-    min-width: 3rem;
+    min-width: 4rem;
     padding: 0.2rem;
     color: white;
   }
@@ -185,24 +176,21 @@ body {
     color: var(--text-btn-color);
     transition: all 1s ease-in-out;
     min-width: 2rem;
-    height: 1rem;
-    box-shadow: 0 0.25rem var(--box-shadow-color);
+    height: 1.7rem;
     cursor: pointer;
   }
 
   .edit-contact-btn svg {
-    width: 1rem;
-    height: 1rem;
+    width: 1.7rem;
+    height: 1.7rem;
   }
   
   .edit-contact-btn:hover {
     background-color: #008000;
-    box-shadow: 0 0.25rem #006600;
   }
 
   .edit-contact-btn:active {
     background-color: #008000;
-    box-shadow: 0 0.125rem #006600;
     transform: translateY(0.125rem);
   }
 
